--- a/register/Views/NavBar.html
+++ b/register/Views/NavBar.html
@@ -8,7 +8,7 @@
 				<div class="toggle">
 					<ul class="toggle-menu">
 
-						<li><a  href="../index.php">Home</a></li>
+						<li><a  href="../index.php">Accueil</a></li>
 						<li><a  href="registration.php">Register</a></li>
 						<li><a  href="login.php">Login</a></li>
 						<li><a  href="../menu.php?pays=france">Recettes Françaises</a></li>
