--- a/register/Views/Footer.html
+++ b/register/Views/Footer.html
@@ -4,10 +4,9 @@
 			<div class="footer-head">
 				<div class="col-md-8 footer-top animated wow fadeInRight" data-wow-duration="1000ms" data-wow-delay="500ms">
 					<ul class=" in">
-						<li><a href="../index.php">Home</a></li>
+						<li><a href="../index.php">Accueil</a></li>
 						<li><a  href="../menu.php">Menu</a></li>
-						<li><a  href="../forum.php">Blog</a></li>
-						<li><a  href="../events.php">Events</a></li>
+						<li><a  href="../forum.php">Forum</a></li>
 						<li><a  href="../contact.php">Contact</a></li>
 					</ul>					
 				</div>
