--- a/register/Views/NavBar-Menu.html
+++ b/register/Views/NavBar-Menu.html
@@ -6,7 +6,7 @@
 			<a href="#" class="navicon"></a>
 				<div class="toggle">
 					<ul class="toggle-menu">
-						<li><a  href="../index.php">Home</a></li>
+						<li><a  href="../index.php">Accueil</a></li>
 						<li><a  href="register/register.php">Register</a></li>
 						<li><a  href="register/login.php">Login</a></li>
 						<li><a  href="../menu.php?pays=france">Recettes Françaises</a></li>
